ihp/media/css/public_scorecards.css
/* ... */
#content table.scorecard tr.countries.reporting ul 
{
	background-color:#E1E8E5;
	border:none;
}

#content table.scorecard tr.countries ul li 
{
	padding:0;
	margin:0;
	display:block;
	float:left;
}

#content table.scorecard tr.countries img
{
	width:50px;
	height:25px;
	padding:5px;
}

/*tr.indicator*/

#content table.scorecard tr.indicator td.expected_result 
{
	/*border-left:1px solid #cfd5d5;*/
	border-left:1px solid #DFD5D5;
	-moz-border-radius-bottomleft:10px;
	-webkit-border-bottom-left-radius:10px;
	border-bottomleft-radius:10px;
	height:1%;
	position:relative;
}


#content table.scorecard tr.indicator > td 
{
	border-bottom:1px solid #cfd5d5;
	padding:10px;
}

/*Expected Result column*/

#content table.scorecard tr.headings th.expected_result
{
	width:300px;
	padding-left:0;
}

td.expected_result span.text {
	display:block;
	background-color:#D1DDD9;
	display:compact;
}

#content table.scorecard td.expected_result table td
{ 
	padding:10px;
}

#content table.scorecard td.expected_result td.icon
{
	padding: 0 auto;
}

/*rating column*/

#content table.scorecard td.rating 
{
	text-align:center;
	width:60px;
}

#content table.scorecard td.rating img 
{
	/*
	width:60px;
	height:40px;
	*/
	padding:5px;
}

/*overall prograss column*/

#content table.scorecard tr.headings th.overall_progress
{
	padding-right:0;
}

#content table.scorecard tr.indicator td.overall_progress 
{
	padding:0px 20px 10px 10px;
	border-right:1px solid #cfd5d5;
	-moz-border-radius-bottomright:10px;
	-webkit-border-bottom-right-radius:10px;
	border-bottom-right-radius:10px;
}

#content table.scorecard tr.indicator_spacer td
{
	height: 10px;
}

/*---Country scorecard styles---*/

.country #content #scorecard_header h2 {
	padding-left:20px;
	text-align:left;
	width:700px;
	background-color:#E1E8E5;
	font-weight:1.3em;
	color:#000;
	border:none;
	margin-top:10px;
}

.country #scorecard_header h2 img {
	float:left;
	padding-right:10px;
	width:50px;
}

div.col {
	width:313px; /* 960-600(scorecard)-30(scorecard padding)-2(scorecard borders)-15(left padding)*/
	padding:15px;
	float:left;
}

/*Scorecard column styles*/

#scorecard  {
	border:1px solid #b3c6c0;
	width:600px;/*640-30(padding)-2(borders)-8(column spacing/2)*/
	-moz-border-radius:15px;
	-webkit-border-radius:15px;
	border-radius:15px;
	margin-top:15px;
}

#scorecard h2, #scorecard h3 {
	margin: 0 0 10px;
	/* position:relative; breaks tooltip positioning */
	font-size:0.9em;
	clear:both;
	background-color:#0A3E3D;
	padding:2px 11px;
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	border-radius:10px;
	color:white;
	text-transform:uppercase;
}

#scorecard h2 span {
	display: inline-block;
}

#scorecard h2 .expected {
 	width: 170px;
}
 
#scorecard h2 .rating {
 	width: 73px;
 	text-align: center;
}
 
.country #scorecard h2 .comment {
	display: inline;
 	float: right;
}

.agency #scorecard h2 .progress,
.agency #scorecard td.progress {
	width: 157px; /*(600-170-73-11*2-10)/2*/
}

.agency #scorecard h2 .progress {
	margin-right: 10px;
}

.agency #scorecard h2 .further-details,
.agency #scorecard td.further-details {
	width: 168px; /*(600-170-73-11*2)/2*/
}

#content #infobox ul.logos {
	border:1px solid #D1DDD9;
	padding:10px;
	margin: 10px 0 0;
	list-style:none;
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	border-radius:10px;
	clear:both;
	position:relative;
	display:block;
	float:left;
}

#content #infobox ul.logos li {
	display:block;
	margin:5px;
	padding:0;
	float:left;
	text-align:left;
	overflow:hidden;
}

#content #infobox ul.logos li img.logo {
	background-color:black;
	height:40px;
	display:block;
}

#content #infobox ul.logos li span.name {
	font-size:0.8em;	
}

#scorecard .category {
	border:1px solid #b3c6c0;
	padding:0;
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	border-radius:10px;
	margin:15px 0 0;
}

#scorecard td.expected_result {
	background-color:#D1DDD9;
	padding:0;
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	border-radius:8px;
	width: 150px;
	padding: 10px;
}

#scorecard td.expected_result p {
	position: relative;
	margin: 10px 0 0;
}

#scorecard td.rating {
	width: 40px;
	text-align: center;
}

#scorecard dl dt p {
	padding:10px;
}

#scorecard td img.icon {
	position:absolute;
	top:-42px;
	left:10px;
}

#scorecard td {
	vertical-align: top;
}

#scorecard td.progress {
	padding-bottom: 10px;
	border-bottom: 2px dotted #D1DDD9;
}

#scorecard tr.last td {
	border-bottom: none;
}

#scorecard dd img {
	position:absolute;
	left:0px;
}


/*Infobox column styles*/

#infobox {
	padding:0 0 0 15px;
}

.infobox, .infobox-fixed {
	border:2px solid #f68b1f;
	-moz-border-radius:15px;
	-webkit-border-radius:15px;
	border-radius:15px;
	padding:10px;
}

.infobox .item, .infobox-fixed .item, .inner {
	background-color:#d1ddd9;
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	border-radius:10px;
	padding:10px;
	margin-bottom:10px;
}

#content .infobox h2,
#content .infobox-fixed h2 {
	margin:0;
	padding:2px 10px 2px 80px;
	-moz-border-radius:10px;
	-webkit-border-radius:10px;
	border-radius:10px;
	background-color: #0a3e3d;
	color:white;
	position:relative;
	text-align: left;
	text-transform: uppercase;
	font-size:0.9em;
	letter-spacing:1px;
}

#content .infobox h2#progress_heading,
#content .infobox h2#noprogress_heading,
#content .infobox-fixed h2 {
	padding-left: 10px;
}

.infobox h2 img {
	position:absolute;
	top:-20px;
	left:10px;
	width: 60px;
	height: 60px;
	z-index: 1; /* float over h3 */
}

.infobox h2 a {
	color: white;
	text-decoration: none;
}

#infobox .item h3 {
	background-color:#85A49B;
	color:#fff;
	text-transform:uppercase;
	padding:4px 10px 4px 70px;
	margin:0;
	-moz-border-radius:8px;
	-webkit-border-radius:8px;
	border-radius:8px;
	position:relative;
	font-size:0.9em;
	clear:both;
}

#infobox .item h3 img {
	position:absolute;
	left:20px;
	top:-8px;
}

#infobox img.rating
{
	width: 40px;
	height: 27px;
}
/* ... */

